--- a/app/src/main/res/layout/date_calculator.xml
+++ b/app/src/main/res/layout/date_calculator.xml
@@ -94,7 +94,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
             android:text="选取"
-            android:textColor="@color/blue"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -136,7 +136,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
             android:text="选取"
-            android:textColor="@color/blue"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
