--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0C6FE9</color>
-    <color name="colorPrimaryDark">#223EDB</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#4C00D5</color>
+    <color name="colorPrimaryDark">#6200EE</color>
+    <color name="colorAccent">#6200EE</color>
     <color name="white">#FFFFFF</color>
-    <color name="blue">#0000FF</color>
 </resources>
