--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -4,40 +4,65 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/day_picture"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:scaleType="fitCenter"/>
-    <!--图片宽（高）不等于ImageView的宽（高）时，按比例缩放，使得图片宽度（高度）等于ImageView的宽度（高度），居中显示。-->
+    <!--这里为什么嵌套了三个LinearLayout呢？是因为最外面那个设置不了margin，然后阴影一加就是只要四周有margin就都会加上，但我只要底部跟右侧的，但又需要上下左右都有margin，所以只能外面再嵌套一个margin左侧和顶部的，里面才是加了阴影的margin底部和右侧的-->
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp">
 
-        <TextView
-            android:id="@+id/day_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:textSize="20dp"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:background="@color/layout_background"
+            android:elevation="10dp">
+            <!--底部+右侧阴影-->
 
-        <TextView
-            android:id="@+id/day_time"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:textSize="15dp"/>
+            <TextView
+                android:id="@+id/day_picture"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textColor="@color/text_color"
+                android:textSize="15dp"
+                android:gravity="center"/>
+                <!--android:scaleType="fitCenter"/>-->
+            <!--图片宽（高）不等于ImageView的宽（高）时，按比例缩放，使得图片宽度（高度）等于ImageView的宽度（高度），居中显示。-->
 
-        <TextView
-            android:id="@+id/day_remark"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:textSize="15dp"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:layout_marginStart="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/day_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="5"
+                    android:textSize="20dp"/>
+
+                <TextView
+                    android:id="@+id/day_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"
+                    android:textSize="15dp"/>
+
+                <TextView
+                    android:id="@+id/day_remark"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"
+                    android:textSize="15dp"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
