--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -77,7 +77,6 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="2019年12月24日 周二"
             android:textColor="@color/text_color"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,13 +86,12 @@
 
         <TextView
             android:id="@+id/timing"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="718小时 19分钟 20秒"
             android:textColor="@color/text_color"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
